<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.projekt.projekt.MenuActivity">

    <Button
        android:id="@+id/gdzieJestemMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/gdzie_jestem"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/identyfikacjaUlicMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gdzieJestemMenuButton"
        android:layout_centerHorizontal="true"
        android:text="@string/identyfikacja_ulic"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <Button
        android:id="@+id/wyjscieMenuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/identyfikacjaUlicMenuButton"
        android:layout_centerHorizontal="true"
        android:text="@string/wyjscie"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</RelativeLayout>