<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="pl.projekt.projekt.WhereActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/bladGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/czerwony"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/dostawcaText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bladGPS"
            android:layout_centerHorizontal="true"
            android:text="@string/dostawca_text"/>

        <TextView
            android:id="@+id/dostawca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dostawcaText"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/szerokoscText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dostawca"
            android:layout_centerHorizontal="true"
            android:text="@string/szerokosc_text"/>

        <TextView
            android:id="@+id/szerokosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/szerokoscText"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/dlugoscText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/szerokosc"
            android:layout_centerHorizontal="true"
            android:text="@string/dlugosc_text"/>

        <TextView
            android:id="@+id/dlugosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dlugoscText"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <TextView
            android:id="@+id/adresText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dlugosc"
            android:layout_centerHorizontal="true"
            android:text="@string/adres_text"/>

        <TextView
            android:id="@+id/dokladnosc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adresText"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/adres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dokladnosc"
            android:layout_centerHorizontal="true"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <Button
            android:id="@+id/pokazNaMapieButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/adres"
            android:layout_centerHorizontal="true"
            android:text="@string/mapa_button"
            android:visibility="gone"/>
    </RelativeLayout>
</ScrollView>
